Feature: Multi-Countries API Traits.
